[workspace]
members = [
    "common",
    "day01",
    "day02",
    "day03",
    "day04",
    "day05",
    "day06",
    "day07",
    "day08",
    "day09",
    "day10",
    "day11",
    "day12",
    "day13",
    "day14"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["John Bolton"]
description = "My solutions for Advent of Code 2023 implemented in Rust."
